// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ULThemeSeparator Component matches snapshot with custom className 1`] = `
<div
  class="relative flex items-center my-6 custom-class"
>
  <div
    class="flex-grow border-t border-gray-300"
  />
  <span
    class="flex-shrink mx-4 text-sm font-medium text-gray-500 uppercase tracking-wider theme-universal:text-(length:--ul-theme-font-body-text-size) theme-universal:font-body"
  >
    OR
  </span>
  <div
    class="flex-grow border-t border-gray-300"
  />
</div>
`;

exports[`ULThemeSeparator Component matches snapshot with text (renders with separator text) 1`] = `
<div
  class="relative flex items-center my-6"
>
  <div
    class="flex-grow border-t border-gray-300"
  />
  <span
    class="flex-shrink mx-4 text-sm font-medium text-gray-500 uppercase tracking-wider theme-universal:text-(length:--ul-theme-font-body-text-size) theme-universal:font-body"
  >
    OR
  </span>
  <div
    class="flex-grow border-t border-gray-300"
  />
</div>
`;

exports[`ULThemeSeparator Component matches snapshot without text (renders as hr) 1`] = `
<hr
  class="my-4 flex-grow border-t border-gray-300"
/>
`;
